split 80 and 443 as two server

--- a/conf/comment.conf
+++ b/conf/comment.conf
@@ -4,19 +4,37 @@
 
 server {
     listen       80;
-    listen       443 ssl;
+    server_name  comment.likee.me;
+    location / {
+        proxy_pass http://localhost:8088;
+        proxy_set_header    Host             $host;
+        proxy_set_header    X-Real-IP        $remote_addr;
+        proxy_set_header    X-Forwarded-For  $proxy_add_x_forwarded_for;
+        proxy_read_timeout 1800;
+        proxy_connect_timeout 1800;
+   }
+}
+
+server {
+    listen       443;
     server_name  comment.likee.me;
 
-    #证书文件
     ssl_certificate     /etc/certificates/likee/likee.me.crt;
-    #私钥文件
     ssl_certificate_key /etc/certificates/likee/likee.me.key;
 
-    # Load configuration files for the default server block.
-    # include /etc/nginx/default.d/*.conf;
+    ssl                  on;
+    ssl_session_timeout  5m;
+    ssl_protocols  SSLv2 SSLv3 TLSv1;
+    ssl_ciphers  ALL:!ADH:!EXPORT56:RC4+RSA:+HIGH:+MEDIUM:+LOW:+SSLv2:+EXP;
+    ssl_prefer_server_ciphers   on;
 
     location / {
         proxy_pass http://localhost:8088;
+        proxy_set_header    Host             $host;
+        proxy_set_header    X-Real-IP        $remote_addr;
+        proxy_set_header    X-Forwarded-For  $proxy_add_x_forwarded_for;
+        proxy_read_timeout 1800;
+        proxy_connect_timeout 1800;
     }
 
     error_page 404 /404.html;
