add readme and update cert path and add renew_cert shell

--- a/conf/comment.conf
+++ b/conf/comment.conf
@@ -19,8 +19,8 @@ server {
     listen       443;
     server_name  comment.likee.me;
 
-    ssl_certificate     /etc/certificates/likee/likee.me.crt;
-    ssl_certificate_key /etc/certificates/likee/likee.me.key;
+    ssl_certificate     /etc/letsencrypt/live/comment.likee.me/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/comment.likee.me/privkey.pem;
 
     ssl                  on;
     ssl_session_timeout  5m;
